{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 26,
  "lineage": "568d69e8-1f1e-abc9-ed8f-366d1ae9dbf8",
  "resources": [
    {
      "module": "module.autoscale",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:891377255640:security-group/sg-0f6d94b929742d163",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6d94b929742d163",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f157e405872970b1"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Prod-asg-sg20240704124408893200000002",
            "name_prefix": "Prod-asg-sg",
            "owner_id": "891377255640",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bbcb890d01b8ceaa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoscale.aws_security_group.lb_sg",
            "module.autoscale.aws_vpc.val_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.autoscale",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:891377255640:security-group/sg-0f157e405872970b1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f157e405872970b1",
            "ingress": [],
            "name": "Prod-lb-sg20240704124407337500000001",
            "name_prefix": "Prod-lb-sg",
            "owner_id": "891377255640",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bbcb890d01b8ceaa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoscale.aws_vpc.val_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.autoscale",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:891377255640:subnet/subnet-001d254525a6b53fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001d254525a6b53fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377255640",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0bbcb890d01b8ceaa"
          },
          "dependencies": [
            "module.autoscale.aws_vpc.val_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.autoscale",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "val_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:891377255640:vpc/vpc-0bbcb890d01b8ceaa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-086d1eaccbf7aef09",
            "default_route_table_id": "rtb-049ad07713bbfd857",
            "default_security_group_id": "sg-0b64ad0a64ff55e86",
            "dhcp_options_id": "dopt-002df2edea2d9804e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bbcb890d01b8ceaa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-049ad07713bbfd857",
            "owner_id": "891377255640"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}